[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-databases"
version = "0.1.7"
description = "A Python library for managing and interacting with multiple databases seamlessly."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Avi Zaguri" },]
keywords = ["development", "databases", "ORM", "SQL", "NoSQL", "database management"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
]

dependencies = [
    "custom-python-logger>=2.0.10",
    "elasticsearch<9",
    "pandas>=2.3.3",
    "pre-commit>=4.5.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "retrying>=1.4.2",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[project.urls]
Homepage = "https://github.com/aviz92/python-databases"
Repository = "https://github.com/aviz92/python-databases"
Issues = "https://github.com/aviz92/python-databases/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["python_databases*"]
namespaces = false
